# sectional-title-agent-management-platform

./: .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  README.md  commitlint.config.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: CODEOWNERS  branch-protection.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml  post-deploy-smoke.yml  supply-chain.yml
docs/: AGENT_ASSIST_AGENTCORE_MAPPING.md  AGENT_ROSTER.md  AI_NATIVE_BUILD_PLAN.md  AI_NATIVE_SDLC_DESIGN.md  AI_NATIVE_SDLC_OPERATING_MODEL.md  ARCHITECTURE.drawio  ARCHITECTURE.md  DEVICE_HANDOFF.md  GREENFIELD_BOOTSTRAP.md  SOLUTION_DESIGN.md  TESTING_STRATEGY.md  VISION_AND_REQUIREMENTS.md
docs/adr/: 0000-record-architecture-decisions.md  0001-aws-serverless-cost-cap.md  0002-two-region-data-inference-split.md  0003-pluggable-repository-port.md  0004-cognito-auth-off-by-default.md  0005-no-vpc-for-lambda.md  0006-bedrock-direct-adapter.md  0007-agentcore-harness-for-sdlc.md  0008-agent-eval-gate-contract.md  0009-changed-line-coverage-and-no-decrease.md  0010-mutation-testing-on-safety-modules.md  0011-frontend-test-stack.md  0012-agent-bot-identity-and-codeowner-enforcement.md  0013-confirm-harness-region.md  0014-minimal-sdlc-agent-roster.md  0015-autonomy-ceiling.md  0016-harness-budget-governance.md  README.md  template.md
docs/architecture/: stak-architecture.drawio
docs/prompts/: testing-specialist.md
eval/: README.md  requirements.txt  run_eval.py  test_run_eval.py
eval/golden/: conduct_and_levies.json
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/e2e/: smoke.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AppShell.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  LoadState.tsx  Notifications.test.tsx  Notifications.tsx  StatusChip.test.tsx  StatusChip.tsx
frontend/src/components/tabs/: AskTab.test.tsx  AskTab.tsx  BoardTab.tsx  DocumentsTab.resilience.test.tsx  DocumentsTab.test.tsx  DocumentsTab.tsx  InboxTab.tsx  RequestTab.test.tsx  RequestTab.tsx  ResolutionsTab.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.tsx  config.ts  errorReporting.test.ts  errorReporting.ts  types.ts  useApi.ts
frontend/src/test/msw/: handlers.ts  server.ts
infra/: README.md
infra/agentcore/: sdlc-harness-system-prompt.txt  update_sdlc_harness.py
infra/cost-guardrails/: README.md  main.tf  outputs.tf  terraform.example.tfvars  variables.tf
infra/github-app/: README.md  main.tf  terraform.example.tfvars  variables.tf
infra/live/: root.hcl
infra/live/dev/: env.hcl
infra/live/dev/af-south-1/: region.hcl
infra/modules/cognito/: main.tf
infra/modules/dynamodb/: main.tf
infra/modules/github_oidc/: main.tf
infra/modules/http_api/: main.tf
infra/modules/lambda_api/: main.tf
infra/modules/s3_docs/: main.tf
infra/modules/sdlc_trigger/: handler.py  main.tf
infra/modules/ses/: main.tf
infra/modules/static_site/: main.tf  outputs.tf  variables.tf
infra/modules/tags/: main.tf
infra/stack_modules/app/: main.tf
infra/stack_modules/bootstrap/: main.tf
infra/stack_modules/inference/: main.tf
infra/stack_modules/sdlc_trigger/: main.tf
infra/stack_modules/site/: main.tf
policy/: README.md  terraform.rego  terraform_test.rego
prototype/: .gitignore  README.md  requirements.txt  run.sh
prototype/app/: __init__.py  config.py  db.py  drafting.py  guardrails.py  intake.py  llm.py  main.py  models.py  rag.py  seed.py  specialists.py  threads.py
prototype/web/: DESIGN_PROMPT.md  app.js  index.html  styles.css
sdlc-agents/: README.md
services/: README.md
services/api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-lambda.txt
services/api/app/: __init__.py  bootstrap.py  main.py  schemas.py  settings.py
services/api/app/adapters/: __init__.py  bedrock_llm.py  dynamo_repo.py  github_issues.py  s3_documents.py  ses_email.py  sqlite_repo.py  stub_llm.py
services/api/app/api/: __init__.py  deps.py  routes.py
services/api/app/domain/: __init__.py  approvals.py  drafting.py  guardrails.py  intake.py  rag.py  sdlc.py  seed.py  threads.py
services/api/app/ports/: __init__.py  documents.py  email.py  llm.py  repository.py  sdlc.py
services/api/app/security/: __init__.py  cognito.py
services/api/tests/: conftest.py  test_api.py  test_approvals.py  test_auth.py  test_bedrock_llm.py  test_documents_api.py  test_domain.py  test_drafting_email.py  test_dynamo_repo.py  test_email_adapters.py  test_github_issues.py  test_s3_documents.py  test_sdlc_api.py  test_sdlc_domain.py  test_seed_gating.py
tests/: README.md
tests/smoke/: README.md  package-lock.json  package.json  smoke.test.ts  tsconfig.json
tooling/: README.md  apply-branch-protection.sh  check-diff-budget.sh  enable-signed-commits.sh  setup.sh
(+6 files in other folders)
