[project]
name = "sectional-title-agent-platform"
version = "0.0.0"
description = "Autonomous agentic property-management platform — AI-native SDLC"
requires-python = ">=3.12"
readme = "README.md"

# Runtime deps live per-service; this root file centralises tool config so
# pre-commit hooks and CI share a single source of truth.

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services", "sdlc-agents", "eval", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, security (bandit subset)
select = ["E", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # asserts allowed in tests
"eval/**" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["services", "sdlc-agents", "eval"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests", "services", "sdlc-agents", "eval"]

[tool.coverage.run]
branch = true
source = ["services", "sdlc-agents", "eval"]

[tool.coverage.report]
# Critical modules must stay highly covered (PII redaction, scoring, versioning).
fail_under = 90
show_missing = true
