[project]
name = "sectional-title-agent-platform"
version = "0.0.0"
description = "Autonomous agentic property-management platform — AI-native SDLC"
requires-python = ">=3.12"
readme = "README.md"

# Runtime deps live per-service; this root file centralises tool config so
# pre-commit hooks and CI share a single source of truth.

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services", "sdlc-agents", "eval", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, security (bandit subset)
select = ["E", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106"]   # asserts + fake credentials allowed in tests
"**/eval/**" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
# Only directories that currently contain Python. Re-add "sdlc-agents" / "eval"
# here once they ship code (mypy errors hard on listed dirs with no .py files).
files = ["services"]

# boto3 / botocore / moto ship no type information; the DynamoDB adapter wraps
# them at a single seam, so treat them as untyped rather than vendoring stubs.
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "moto.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests", "services", "sdlc-agents", "eval"]

[tool.coverage.run]
branch = true
source = ["services", "sdlc-agents", "eval"]

[tool.coverage.report]
# Critical modules must stay highly covered (PII redaction, scoring, versioning).
fail_under = 90
show_missing = true

[tool.coverage.xml]
# Emitted for diff-cover (coverage-cannot-decrease gate, Plan §2 G5).
output = "coverage.xml"

[tool.mutmut]
# Mutation testing on critical modules only (Plan §2 G5). Keeps runtime sane
# while catching tests that pass without actually asserting behaviour. Scoped to
# the safety-critical seams that exist today; extend as more land (PII
# redaction, scoring, versioning).
paths_to_mutate = "services/api/app/domain/guardrails.py,services/api/app/domain/intake.py,services/api/app/security/cognito.py"
tests_dir = "services/api/tests/"
runner = "python -m pytest -x -q"
