[project]
name = "stak-api"
version = "0.1.0"
description = "Dashboard API service — productionised trustee platform (FastAPI on Lambda)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.111",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "uvicorn[standard]>=0.30",
    # AWS Lambda adapter: lets the same FastAPI app run behind API Gateway with
    # zero code change (Increment 8). Pure-python, tiny.
    "mangum>=0.17",
    # Cognito access-token verification (RS256). ``crypto`` extra pulls in
    # ``cryptography`` for signature checks (Increment 6b auth seam).
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
# boto3 is only needed by the DynamoDB / Bedrock adapters (Increments 6-7). It
# is pre-provided in the Lambda runtime, so it stays optional for local dev.
aws = ["boto3>=1.34"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    # DynamoDB adapter is exercised against an in-memory AWS mock — no network,
    # no real table — so the persistence seam is covered in CI (Increment 6).
    "boto3>=1.34",
    "moto[dynamodb]>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
